--- a/node/cli/Cargo.toml
+++ b/node/cli/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "deer-cli"
-version = "0.2.0"
+version = "0.2.2"
+authors = ["Deer Network"]
 description = "Official Rust implementation of the Deer protocol"
 build = "build.rs"
 edition = "2018"
