--- a/pallets/nft-auction/Cargo.toml
+++ b/pallets/nft-auction/Cargo.toml
@@ -15,6 +15,7 @@ sp-runtime = { path = "../../substrate/primitives/runtime", default-features = f
 frame-benchmarking = { path = "../../substrate/frame/benchmarking", default-features = false, optional = true }
 frame-support = { path = "../../substrate/frame/support", default-features = false }
 frame-system = { path = "../../substrate/frame/system", default-features = false }
+log = { version = "0.4.14", default-features = false }
 
 pallet-nft = { path = "../nft", default-features = false }
 
