--- a/node/executor/Cargo.toml
+++ b/node/executor/Cargo.toml
@@ -12,15 +12,14 @@ targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
 codec = { package = "parity-scale-codec", version = "2.2.0" }
+scale-info = { version = "1.0", features = ["derive"] }
 node-primitives = { package = "deer-primitives", path = "../primitives" }
 node-runtime = { package = "deer-runtime", path = "../runtime" }
 sc-executor = { path = "../../substrate/client/executor" }
 sp-core = { path = "../../substrate/primitives/core" }
 sp-keystore = { path = "../../substrate/primitives/keystore" }
-sp-io = { path = "../../substrate/primitives/io" }
 sp-state-machine = { path = "../../substrate/primitives/state-machine" }
 sp-trie = { path = "../../substrate/primitives/trie" }
-trie-root = "0.16.0"
 frame-benchmarking = { path = "../../substrate/frame/benchmarking" }
 
 [dev-dependencies]
@@ -30,26 +29,17 @@ frame-system = { path = "../../substrate/frame/system" }
 
 pallet-balances = { path = "../../substrate/frame/balances" }
 pallet-contracts = { path = "../../substrate/frame/contracts" }
-pallet-grandpa = { path = "../../substrate/frame/grandpa" }
 pallet-im-online = { path = "../../substrate/frame/im-online" }
-pallet-indices = { path = "../../substrate/frame/indices" }
-pallet-session = { path = "../../substrate/frame/session" }
 pallet-timestamp = { path = "../../substrate/frame/timestamp" }
-pallet-transaction-payment = { path = "../../substrate/frame/transaction-payment" }
 pallet-treasury = { path = "../../substrate/frame/treasury" }
 sp-application-crypto = { path = "../../substrate/primitives/application-crypto" }
 sp-consensus-babe = { path = "../../substrate/primitives/consensus/babe" }
 sp-runtime = { path = "../../substrate/primitives/runtime" }
 sp-externalities = { path = "../../substrate/primitives/externalities" }
-substrate-test-client = { path = "../../substrate/test-utils/client" }
 wat = "1.0"
 futures = "0.3.9"
 
 [features]
-wasmtime = [
-	"sc-executor/wasmtime",
-]
-wasmi-errno = [
-	"sc-executor/wasmi-errno",
-]
+wasmtime = ["sc-executor/wasmtime"]
+wasmi-errno = ["sc-executor/wasmi-errno"]
 stress-test = []
