--- a/pallets/nft-order/Cargo.toml
+++ b/pallets/nft-order/Cargo.toml
@@ -9,6 +9,7 @@ targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
 codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false, features = ["derive", "max-encoded-len"] }
+scale-info = { version = "1.0", default-features = false, features = ["derive"] }
 sp-std = { path = "../../substrate/primitives/std", default-features = false }
 sp-core = { path = "../../substrate/primitives/core", default-features = false }
 sp-runtime = { path = "../../substrate/primitives/runtime", default-features = false }
@@ -28,6 +29,7 @@ pallet-balances = { path = "../../substrate/frame/balances" }
 default = ["std"]
 std = [
 	"codec/std",
+	"scale-info/std",
 	"sp-std/std",
 	"sp-core/std",
 	"sp-runtime/std",
