--- a/pallets/storage/Cargo.toml
+++ b/pallets/storage/Cargo.toml
@@ -9,6 +9,7 @@ targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
 codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false }
+scale-info = { version = "1.0", default-features = false, features = ["derive"] }
 sp-std = { default-features = false, path = "../../substrate/primitives/std" }
 sp-core = { default-features = false, path = "../../substrate/primitives/core" }
 sp-runtime = { default-features = false, path = "../../substrate/primitives/runtime" }
@@ -34,6 +35,7 @@ pallet-timestamp = { path = "../../substrate/frame/timestamp" }
 default = ["std"]
 std = [
 	"codec/std",
+	"scale-info/std",
 	"sp-std/std",
 	"sp-core/std",
 	"sp-runtime/std",
