--- a/node/runtime/Cargo.toml
+++ b/node/runtime/Cargo.toml
@@ -104,6 +104,7 @@ std = [
 	"pallet-authorship/std",
 	"sp-consensus-babe/std",
 	"pallet-babe/std",
+	"pallet-bags-list/std",
     "pallet-balances/std",
     "pallet-bounties/std",
     "sp-block-builder/std",
@@ -169,6 +170,7 @@ runtime-benchmarks = [
 	"pallet-election-provider-multi-phase/runtime-benchmarks",
 	"sp-runtime/runtime-benchmarks",
 	"pallet-babe/runtime-benchmarks",
+	"pallet-bags-list/runtime-benchmarks",
     "pallet-balances/runtime-benchmarks",
     "pallet-bounties/runtime-benchmarks",
 	"pallet-collective/runtime-benchmarks",
