--- a/node/cli/Cargo.toml
+++ b/node/cli/Cargo.toml
@@ -33,7 +33,7 @@ futures = "0.3.16"
 hex-literal = "0.3.4"
 log = "0.4.8"
 rand = "0.7.2"
-structopt = { version = "0.3.8", optional = true }
+structopt = { version = "0.3.25", optional = true }
 parking_lot = "0.11.1"
 
 # primitives
@@ -90,7 +90,7 @@ frame-benchmarking-cli = { optional = true, path = "../../substrate/utils/frame/
 node-inspect = { package = "deer-inspect", optional = true, path = "../inspect" }
 try-runtime-cli = { optional = true, path = "../../substrate/utils/frame/try-runtime/cli" }
 
-[target.'cfg(target_arch="x86_64")'.dependencies]
+[target.'cfg(any(target_arch="x86_64", target_arch="aarch64"))'.dependencies]
 node-executor = { package="deer-executor", path = "../executor", features = [ "wasmtime" ] }
 sc-cli = { optional = true, path = "../../substrate/client/cli", features = [ "wasmtime" ] }
 sc-service = { path = "../../substrate/client/service", default-features = false, features = [ "wasmtime" ] }
@@ -103,24 +103,27 @@ sc-consensus = { path = "../../substrate/client/consensus/common" }
 sc-consensus-babe = { path = "../../substrate/client/consensus/babe" }
 sc-consensus-epochs = { path = "../../substrate/client/consensus/epochs" }
 sc-service-test = { path = "../../substrate/client/service/test" }
-sp-tracing = { version = "4.0.0-dev", path = "../../substrate/primitives/tracing" }
+sc-block-builder = { path = "../../substrate/client/block-builder" }
+sp-tracing = { path = "../../substrate/primitives/tracing" }
+sp-blockchain = { path = "../../substrate/primitives/blockchain" }
 futures = "0.3.16"
 tempfile = "3.1.0"
 assert_cmd = "2.0.2"
-nix = "0.19"
+nix = "0.23"
 serde_json = "1.0"
 regex = "1"
-platforms = "1.1"
+platforms = "2.0"
 async-std = { version = "1.10.0", features = ["attributes"] }
 soketto = "0.4.2"
 criterion = { version = "0.3.5", features = [ "async_tokio" ] }
-tokio = { version = "1.10", features = ["macros", "time"] }
-jsonrpsee-ws-client = { version = "0.3.1", default-features = false, features = ["tokio1"] }
+tokio = { version = "1.13", features = ["macros", "time"] }
+jsonrpsee-ws-client = "0.4.1"
 wait-timeout = "0.2"
 remote-externalities = { path = "../../substrate/utils/frame/remote-externalities" }
+pallet-timestamp = { path = "../../substrate/frame/timestamp" }
 
 [build-dependencies]
-structopt = { version = "0.3.8", optional = true }
+structopt = { version = "0.3.25", optional = true }
 node-inspect = { package = "deer-inspect", optional = true, path = "../inspect" }
 frame-benchmarking-cli = { optional = true, path = "../../substrate/utils/frame/benchmarking-cli" }
 substrate-build-script-utils = { optional = true, path = "../../substrate/utils/build-script-utils" }
