--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -9,22 +9,23 @@ jobs:
   github-releases:
     runs-on: ubuntu-18.04
     outputs:
-      tag: ${{ steps.check_rc.outputs.tag }}
-      rc: ${{ steps.check_rc.outputs.rc }}
+      docker: ${{ steps.check_tag.outputs.image}
     steps: 
       - uses: actions/checkout@v2
         with:
           submodules: 'true'
-      - name: Check rc
-        id: check_rc
+      - name: Check Tag
+        id: check_tag
         shell: bash
         run: |
-          tag=${GITHUB_REF/refs\/tags\//}
-          echo "::set-output name=tag::$tag"
-          if [[ "$tag" =~ rc[0-9]+$ ]]; then
-            echo "::set-output name=rc::true"
-          else
+          tag=${GITHUB_REF##*/}
+          if [[ "$tag" =~ [0-9]+.[0-9]+.[0-9]+$ ]]; then
+            echo "::set-output name=image::deernetwork/deer-node:latest,deernetwork/deer-node:$tag"
+            echo "::set-output name=tag::$tag"
             echo "::set-output name=rc::false"
+          else
+            echo "::set-output name=image::deernetwork/deer-node:dev"
+            echo "::set-output name=rc::true"
           fi
       - name: Install rust toolchain
         uses: actions-rs/toolchain@v1
@@ -41,7 +42,7 @@ jobs:
       - uses: marvinpinto/action-automatic-releases@latest
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          prerelease: ${{ steps.check_rc.outputs.rc }}
+          prerelease: ${{ steps.check_tag.outputs.rc }}
           files: |
             target/release/deer-node
             target/release/wbuild/deer-runtime/deer_runtime.compact.wasm 
@@ -49,7 +50,6 @@ jobs:
   docker-hub:
     runs-on: ubuntu-18.04
     needs: ["github-releases"]
-    if: needs.github-releases.outputs.rc == 'false'
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -71,5 +71,5 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          push: true
-          tags: deernetwork/deer-node:latest,deernetwork/deer-node:${{ needs.github-releases.outputs.tag }}
+          push: false # TODO set ture when everything is ok
+          tags: ${{ steps.check_tag.outputs.image }}
