--- a/node/runtime/Cargo.toml
+++ b/node/runtime/Cargo.toml
@@ -88,9 +88,11 @@ pallet-vesting = { path = "../../substrate/frame/vesting", default-features = fa
 
 # node pallets
 pallet-nft = { path = "../../pallets/nft", default-features = false }
+pallet-nft-rpc-runtime-api = { path = "../../pallets/nft/rpc/runtime-api", default-features = false }
 pallet-nft-order = { path = "../../pallets/nft-order", default-features = false }
 pallet-nft-auction = { path = "../../pallets/nft-auction", default-features = false }
 pallet-storage = { path = "../../pallets/storage", default-features = false }
+pallet-storage-rpc-runtime-api = { path = "../../pallets/storage/rpc/runtime-api", default-features = false }
 pallet-bridge = { path = "../../pallets/bridge", default-features = false }
 pallet-bridge-transfer = { path = "../../pallets/bridge-transfer", default-features = false }
 
@@ -161,9 +163,11 @@ std = [
 	"sp-npos-elections/std",
 	"sp-io/std",
     "pallet-nft/std",
+	"pallet-nft-rpc-runtime-api/std",
     "pallet-nft-order/std",
     "pallet-nft-auction/std",
     "pallet-storage/std",
+	"pallet-storage-rpc-runtime-api/std",
     "pallet-bridge/std",
     "pallet-bridge-transfer/std",
 ]
