--- a/pallets/storage/Cargo.toml
+++ b/pallets/storage/Cargo.toml
@@ -22,6 +22,7 @@ webpki = { path = "../../vendors/webpki", default-features = false }
 p256 = { version = "0.9.0", default-features = false, features = ["ecdsa"] }
 serde_json = { version = "1.0.64", default-features = false, features = ["alloc"] }
 hex-literal = { version = "0.3.4", optional = true }
+runtime-api = { package = "pallet-storage-rpc-runtime-api", path = "./rpc/runtime-api", default-features = false }
 
 [dev-dependencies]
 hex-literal = "0.3.4"
@@ -43,6 +44,7 @@ std = [
 	"frame-support/std",
 	"frame-system/std",
 	"frame-benchmarking/std",
+	"runtime-api/std",
 ]
 runtime-benchmarks = [
 	"frame-benchmarking",
