--- a/pallets/storage/Cargo.toml
+++ b/pallets/storage/Cargo.toml
@@ -11,6 +11,7 @@ targets = ["x86_64-unknown-linux-gnu"]
 codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false }
 scale-info = { version = "1.0", default-features = false, features = ["derive"] }
 sp-std = { default-features = false, path = "../../substrate/primitives/std" }
+sp-io = { default-features = false, path = "../../substrate/primitives/io" }
 sp-core = { default-features = false, path = "../../substrate/primitives/core" }
 sp-runtime = { default-features = false, path = "../../substrate/primitives/runtime" }
 frame-support = { default-features = false, path = "../../substrate/frame/support" }
@@ -39,6 +40,7 @@ std = [
 	"codec/std",
 	"scale-info/std",
 	"sp-std/std",
+	"sp-io/std",
 	"sp-core/std",
 	"sp-runtime/std",
 	"frame-support/std",
