--- a/node/cli/Cargo.toml
+++ b/node/cli/Cargo.toml
@@ -4,8 +4,9 @@ version = "0.4.0"
 authors = ["Deer Network"]
 description = "Official Rust implementation of the Deer protocol"
 build = "build.rs"
-edition = "2018"
-license = "Apache 2.0"
+edition = "2021"
+license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
+default-run = "deer-node"
 homepage = "https://deernetwork.org"
 repository = "https://github.com/DeerNetwork/deer-node/"
 
@@ -27,14 +28,14 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 # third-party dependencies
-codec = { package = "parity-scale-codec", version = "2.2.0" }
-serde = { version = "1.0.126", features = ["derive"] }
-futures = "0.3.16"
+clap = { version = "3.1.18", features = ["derive"], optional = true }
+codec = { package = "parity-scale-codec", version = "3.0.0" }
+serde = { version = "1.0.136", features = ["derive"] }
+jsonrpsee = { version = "0.14.0", features = ["server"] }
+futures = "0.3.21"
 hex-literal = "0.3.4"
-log = "0.4.8"
-rand = "0.7.2"
-structopt = { version = "0.3.25", optional = true }
-parking_lot = "0.11.1"
+log = "0.4.17"
+rand = "0.8"
 
 # primitives
 sp-authority-discovery = {  path = "../../substrate/primitives/authority-discovery" }
@@ -66,11 +67,11 @@ grandpa = { package = "sc-finality-grandpa", path = "../../substrate/client/fina
 sc-rpc = { path = "../../substrate/client/rpc" }
 sc-basic-authorship = { path = "../../substrate/client/basic-authorship" }
 sc-service = { default-features = false, path = "../../substrate/client/service" }
-sc-tracing = { path = "../../substrate/client/tracing" }
 sc-telemetry = { path = "../../substrate/client/telemetry" }
-sc-authority-discovery = {  path = "../../substrate/client/authority-discovery" }
 sc-executor = { path = "../../substrate/client/executor" }
+sc-authority-discovery = {  path = "../../substrate/client/authority-discovery" }
 sc-sync-state-rpc = { path = "../../substrate/client/sync-state-rpc" }
+sc-sysinfo = { path = "../../substrate/client/sysinfo" }
 
 # frame dependencies
 frame-system = { path = "../../substrate/frame/system" }
@@ -106,24 +107,24 @@ sc-service-test = { path = "../../substrate/client/service/test" }
 sc-block-builder = { path = "../../substrate/client/block-builder" }
 sp-tracing = { path = "../../substrate/primitives/tracing" }
 sp-blockchain = { path = "../../substrate/primitives/blockchain" }
-futures = "0.3.16"
+futures = "0.3.21"
 tempfile = "3.1.0"
 assert_cmd = "2.0.2"
 nix = "0.23"
 serde_json = "1.0"
-regex = "1"
+regex = "1.5.5"
 platforms = "2.0"
-async-std = { version = "1.10.0", features = ["attributes"] }
-soketto = "0.4.2"
+async-std = { version = "1.11.0", features = ["attributes"] }
+soketto = "0.7.1"
 criterion = { version = "0.3.5", features = [ "async_tokio" ] }
-tokio = { version = "1.13", features = ["macros", "time"] }
-jsonrpsee-ws-client = "0.4.1"
+tokio = { version = "1.17.0", features = ["macros", "time", "parking_lot"] }
 wait-timeout = "0.2"
 remote-externalities = { path = "../../substrate/utils/frame/remote-externalities" }
 pallet-timestamp = { path = "../../substrate/frame/timestamp" }
 
 [build-dependencies]
-structopt = { version = "0.3.25", optional = true }
+clap = { version = "3.1.18", optional = true }
+clap_complete = { version = "3.0", optional = true }
 node-inspect = { package = "deer-inspect", optional = true, path = "../inspect" }
 frame-benchmarking-cli = { optional = true, path = "../../substrate/utils/frame/benchmarking-cli" }
 substrate-build-script-utils = { optional = true, path = "../../substrate/utils/build-script-utils" }
@@ -140,8 +141,9 @@ cli = [
 	"sc-cli",
 	"frame-benchmarking-cli",
 	"substrate-frame-cli",
-	"sc-service/db",
-	"structopt",
+	"sc-service/rocksdb",
+	"clap",
+	"clap_complete",
 	"substrate-build-script-utils",
 	"try-runtime-cli",
 ]
