--- a/node/executor/Cargo.toml
+++ b/node/executor/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "deer-executor"
 version = "0.2.0"
+authors = ["Deer Network"]
 description = "Official Rust implementation of the Deer protocol"
-edition = "2018"
-license = "Apache 2.0"
+edition = "2021"
+license = "Apache-2.0"
 homepage = "https://deernetwork.org"
 repository = "https://github.com/DeerNetwork/deer-node/"
 
@@ -11,33 +12,37 @@ repository = "https://github.com/DeerNetwork/deer-node/"
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
-codec = { package = "parity-scale-codec", version = "2.2.0" }
-scale-info = { version = "1.0", features = ["derive"] }
+codec = { package = "parity-scale-codec", version = "3.0.0" }
+scale-info = { version = "2.1.1", features = ["derive"] }
+frame-benchmarking = { path = "../../substrate/frame/benchmarking" }
 node-primitives = { package = "deer-primitives", path = "../primitives" }
 node-runtime = { package = "deer-runtime", path = "../runtime" }
 sc-executor = { path = "../../substrate/client/executor" }
 sp-core = { path = "../../substrate/primitives/core" }
 sp-keystore = { path = "../../substrate/primitives/keystore" }
 sp-state-machine = { path = "../../substrate/primitives/state-machine" }
+sp-tracing = { path = "../../substrate/primitives/tracing" }
 sp-trie = { path = "../../substrate/primitives/trie" }
-frame-benchmarking = { path = "../../substrate/frame/benchmarking" }
 
 [dev-dependencies]
 criterion = "0.3.0"
+futures = "0.3.21"
+wat = "1.0"
 frame-support = { path = "../../substrate/frame/support" }
 frame-system = { path = "../../substrate/frame/system" }
 
 pallet-balances = { path = "../../substrate/frame/balances" }
 pallet-contracts = { path = "../../substrate/frame/contracts" }
 pallet-im-online = { path = "../../substrate/frame/im-online" }
+pallet-sudo = { path = "../../substrate/frame/sudo" }
 pallet-timestamp = { path = "../../substrate/frame/timestamp" }
 pallet-treasury = { path = "../../substrate/frame/treasury" }
+pallet-transaction-payment = { path = "../../substrate/frame/transaction-payment" }
 sp-application-crypto = { path = "../../substrate/primitives/application-crypto" }
 sp-consensus-babe = { path = "../../substrate/primitives/consensus/babe" }
-sp-runtime = { path = "../../substrate/primitives/runtime" }
 sp-externalities = { path = "../../substrate/primitives/externalities" }
-wat = "1.0"
-futures = "0.3.9"
+sp-keyring = { path = "../../substrate/primitives/keyring" }
+sp-runtime = { path = "../../substrate/primitives/runtime" }
 
 [features]
 wasmtime = ["sc-executor/wasmtime"]
