--- a/pallets/nft-order/Cargo.toml
+++ b/pallets/nft-order/Cargo.toml
@@ -1,22 +1,22 @@
 [package]
 name = "pallet-nft-order"
 version = "0.4.0"
-edition = "2018"
+edition = "2021"
 license = "Apache 2.0"
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
-codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false, features = ["derive", "max-encoded-len"] }
-scale-info = { version = "1.0", default-features = false, features = ["derive"] }
+codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["max-encoded-len"] }
+scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
+log = { version = "0.4.17", default-features = false }
 sp-std = { path = "../../substrate/primitives/std", default-features = false }
 sp-core = { path = "../../substrate/primitives/core", default-features = false }
 sp-runtime = { path = "../../substrate/primitives/runtime", default-features = false }
 frame-benchmarking = { path = "../../substrate/frame/benchmarking", default-features = false, optional = true }
 frame-support = { path = "../../substrate/frame/support", default-features = false }
 frame-system = { path = "../../substrate/frame/system", default-features = false }
-log = { version = "0.4.14", default-features = false }
 
 pallet-nft = { path = "../nft", default-features = false }
 
