--- a/pallets/nft/Cargo.toml
+++ b/pallets/nft/Cargo.toml
@@ -1,23 +1,23 @@
 [package]
 name = "pallet-nft"
 version = "0.4.0"
-edition = "2018"
+edition = "2021"
 license = "Apache 2.0"
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
-codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false }
-enumflags2 = { version = "0.6.3" }
-scale-info = { version = "1.0", default-features = false, features = ["derive"] }
+codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["max-encoded-len"] }
+scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
+log = { version = "0.4.17", default-features = false }
+enumflags2 = { version = "0.7.4" }
 sp-std = { default-features = false, path = "../../substrate/primitives/std" }
 sp-core = { default-features = false, path = "../../substrate/primitives/core" }
 sp-runtime = { default-features = false, path = "../../substrate/primitives/runtime" }
 frame-support = { default-features = false, path = "../../substrate/frame/support" }
 frame-system = { default-features = false, path = "../../substrate/frame/system" }
 frame-benchmarking = { path = "../../substrate/frame/benchmarking", default-features = false, optional = true }
-log = { version = "0.4.14", default-features = false }
 
 [dev-dependencies]
 sp-std = { path = "../../substrate/primitives/std" }
