--- a/pallets/storage/Cargo.toml
+++ b/pallets/storage/Cargo.toml
@@ -1,15 +1,20 @@
 [package]
 name = "pallet-storage"
 version = "0.4.0"
-edition = "2018"
+edition = "2021"
 license = "Apache 2.0"
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
-codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false }
-scale-info = { version = "1.0", default-features = false, features = ["derive"] }
+codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["max-encoded-len"] }
+scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
+log = { version = "0.4.17", default-features = false }
+base64 = { version = "0.13.0", default-features = false, features = ["alloc"] }
+p256 = { version = "0.10.1", default-features = false, features = ["ecdsa"] }
+serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
+hex-literal = { version = "0.3.4", optional = true }
 sp-std = { default-features = false, path = "../../substrate/primitives/std" }
 sp-io = { default-features = false, path = "../../substrate/primitives/io" }
 sp-core = { default-features = false, path = "../../substrate/primitives/core" }
@@ -17,12 +22,7 @@ sp-runtime = { default-features = false, path = "../../substrate/primitives/runt
 frame-support = { default-features = false, path = "../../substrate/frame/support" }
 frame-system = { default-features = false, path = "../../substrate/frame/system" }
 frame-benchmarking = { path = "../../substrate/frame/benchmarking", default-features = false, optional = true }
-log = { version = "0.4.14", default-features = false }
-base64 = { version = "0.13.0", default-features = false, features = ["alloc"] }
 webpki = { path = "../../vendors/webpki", default-features = false }
-p256 = { version = "0.9.0", default-features = false, features = ["ecdsa"] }
-serde_json = { version = "1.0.64", default-features = false, features = ["alloc"] }
-hex-literal = { version = "0.3.4", optional = true }
 runtime-api = { package = "pallet-storage-rpc-runtime-api", path = "./rpc/runtime-api", default-features = false }
 
 [dev-dependencies]
