--- a/pallets/storage/rpc/Cargo.toml
+++ b/pallets/storage/rpc/Cargo.toml
@@ -1,17 +1,15 @@
 [package]
 name = "pallet-storage-rpc"
 version = "0.4.0"
-edition = "2018"
+edition = "2021"
 license = "Apache 2.0"
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
-codec = { package = "parity-scale-codec", version = "2" }
-jsonrpc-core = "18.0.0"
-jsonrpc-core-client = "18.0.0"
-jsonrpc-derive = "18.0.0"
+codec = { package = "parity-scale-codec", version = "3.0.0" }
+jsonrpsee = { version = "0.14.0", features = ["server", "macros"] }
 
 pallet-storage-rpc-runtime-api = { path = "./runtime-api" }
 
