--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -23,6 +23,6 @@ jobs:
           target: wasm32-unknown-unknown
           components: rustfmt
       - name: Check Formatting
-        run: cargo fmt -- --check
+        run: cargo fmt --check
       - name: Run tests
-        run: cargo test --all
+        run: cargo test --workspace --exclude deer-cli
